--- a/DemoMapperDTO/appsettings.json
+++ b/DemoMapperDTO/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=ZSCHN01LP0460;user=sa;password=Password@123;database=DemoMapperDTO"
+  }
 }
